WIP: Add Delphix S3/Java packages to seed repository
    $ time ./scripts/docker-run.sh make seed-repository
    ...
    real    20m14.132s
    user    0m0.109s
    sys     0m0.134s

    $ ls -lh artifacts/seed-repository.tar.gz
    -rw-r--r-- 1 root root 2.7G Jun 21 20:02 artifacts/seed-repository.tar.gz

    $ tar -tf artifacts/seed-repository.tar.gz | egrep '.deb$' | head
    ./pool/5e/fc/c49e28f1bf51b04248f32a38a88d_tshark_2.4.5-1_amd64.deb
    ./pool/5e/e2/ac50a7e374a8312fb68c64da27da_libxrandr2_2:1.5.1-1_amd64.deb
    ./pool/5e/cd/8162a82d8c601d8951be2dcd1934_python3-jwt_1.5.3+ds1-1_all.deb
    ./pool/5e/7b/6a7c752617a9dc650c58baaaf794_ntp_1:4.2.8p10+dfsg-5ubuntu7_amd64.deb
    ./pool/d4/51/eb00b2d0e2940e26028ea9f2fb1b_adduser_3.116ubuntu1_all.deb
    ./pool/d4/ae/dc95e16009f74d984ea189bc8809_libcomerr2_1.44.1-1_amd64.deb
    ./pool/8f/ed/f4bd27fc3f5d7b2fe3f1412e9221_gzip_1.6-5ubuntu1_amd64.deb
    ./pool/8f/fb/ca3fe85061fbbfd7e78fb05466fd_libsasl2-2_2.1.27~101-g0780600+dfsg-3ubuntu2_amd64.deb
    ./pool/ff/c4/8ddd362288e45525f12a9a84eae5_libfreetype6_2.8.1-2ubuntu2_amd64.deb
    ./pool/ff/9e/29376ae796b4108ca7f2aa26698a_python-six_1.11.0-2_all.deb

    $ tar -tf artifacts/seed-repository.tar.gz | egrep '.deb$' | wc -l
    1276

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -43,8 +43,10 @@ RUN \
       gdisk \
       germinate \
       git \
+      java-package \
       jq \
       kpartx \
+      libxt6 \
       lintian \
       make \
       man \
