WIP: create repository with Delphix packages for live-build to consume

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -31,24 +31,27 @@ RUN \
   apt-get install -y \
       ansible \
       aptly \
+      awscli \
+      coreutils \
       debhelper \
       debootstrap \
       dpkg-dev \
-      livecd-rootfs \
-      zfsutils-linux \
-      awscli \
-      coreutils \
       equivs \
       gdisk \
       germinate \
       git \
+      java-package \
       jq \
       kpartx \
+      libxt6 \
       lintian \
+      livecd-rootfs \
       make \
       man \
+      rename \
       shellcheck \
-      vim && \
+      vim \
+      zfsutils-linux && \
   rm -rf /var/lib/apt/lists/*
 
 RUN wget -nv -O /usr/local/bin/shfmt \
